# marley

./: .gitignore  CMakeLists.txt  README.rst  my_om_rw_config.js  rw.cc
data/: optical_model.js
data/optical_model/: optical_model_kd_global.js  optical_model_kduq_federal_000.js  optical_model_kduq_federal_001.js  optical_model_kduq_federal_002.js  optical_model_kduq_federal_003.js  optical_model_kduq_federal_004.js  optical_model_kduq_federal_005.js  optical_model_kduq_federal_006.js  optical_model_kduq_federal_007.js  optical_model_kduq_federal_008.js  optical_model_kduq_federal_009.js  optical_model_kduq_federal_010.js  optical_model_kduq_federal_011.js  optical_model_kduq_federal_012.js  optical_model_kduq_federal_013.js  optical_model_kduq_federal_014.js  optical_model_kduq_federal_015.js  optical_model_kduq_federal_016.js  optical_model_kduq_federal_017.js  optical_model_kduq_federal_018.js  optical_model_kduq_federal_019.js  optical_model_kduq_federal_020.js  optical_model_kduq_federal_021.js  optical_model_kduq_federal_022.js  optical_model_kduq_federal_023.js  optical_model_kduq_federal_024.js  optical_model_kduq_federal_025.js  optical_model_kduq_federal_026.js  optical_model_kduq_federal_027.js  optical_model_kduq_federal_028.js  optical_model_kduq_federal_029.js  optical_model_kduq_federal_030.js  optical_model_kduq_federal_031.js  optical_model_kduq_federal_032.js  optical_model_kduq_federal_033.js  optical_model_kduq_federal_034.js  optical_model_kduq_federal_035.js  optical_model_kduq_federal_036.js  optical_model_kduq_federal_037.js  optical_model_kduq_federal_038.js  (+378 more)
data/react/: CEvNS40Ar.react  fake-CC.react  ve16OCC_CRPA.react  ve40ArCC_Bhattacharya1998.react  ve40ArCC_Bhattacharya2009-2.react  ve40ArCC_Bhattacharya2009-Discrete.react  ve40ArCC_Bhattacharya2009.react  ve40ArCC_HF-CRPA-nodelta.react  ve40ArCC_HF-CRPA.react  ve40ArCC_Liu1998.react
docs/: conf.py
examples/executables/: mardecay.cc  mardumpxs.cc  marprint.cc  marreweight.cc
examples/marg4/include/: DetectorConstruction.hh  EventAction.hh  MarleyPrimaryGeneratorAction.hh
examples/marg4/src/: DetectorConstruction.cc  EventAction.cc  MarleyPrimaryGeneratorAction.cc  marg4.cc
hepmc3/: README
include/marley/: AllowedNuclearReaction.hh  AllowedNuclearReactionWithQ2.hh  BackshiftedFermiGasModel.hh  CachedOpticalModel.hh  ChebyshevInterpolatingFunction.hh  CoulombCorrector.hh  DecayScheme.hh  ElectronReaction.hh  Error.hh  Event.hh  EventFileReader.hh  EventProcessor.hh  ExitChannel.hh  FileManager.hh  FormFactor.hh  Fragment.hh  Gamma.hh  GammaStrengthFunctionModel.hh  Generator.hh  HauserFeshbachDecay.hh  Integrator.hh  InterpolatingFunction.hh  InterpolationGrid.hh  IteratorToMember.hh  IteratorToPointerMember.hh  JSON.hh  JSONConfig.hh  KoningDelarocheOpticalModel.hh  LeptonFactors.hh  Level.hh  LevelDensityModel.hh  LinearInterpolatingFunction.hh  Logger.hh  MacroEventFileReader.hh  MassTable.hh  MatrixElement.hh  NeutrinoSource.hh  NuclearReaction.hh  NuclearResponses.hh  NucleusDecayer.hh  (+28 more)
include/marley/tests/: Histogram.hh
src/: AllowedNuclearReaction.cc  AllowedNuclearReactionWithQ2.cc  BackshiftedFermiGasModel.cc  CachedOpticalModel.cc  ChebyshevInterpolatingFunction.cc  CoulombCorrector.cc  DecayScheme.cc  ElectronReaction.cc  Error.cc  EventFileReader.cc  ExitChannel.cc  FileManager.cc  FormFactor.cc  Gamma.cc  GammaStrengthFunctionModel.cc  Generator.cc  HauserFeshbachDecay.cc  Integrator.cc  JSONConfig.cc  KoningDelarocheOpticalModel.cc  Level.cc  LinearInterpolatingFunction.cc  Logger.cc  MassTable.cc  NeutrinoSource.cc  NuclearReaction.cc  NucleusDecayer.cc  OMPWeightCalculator.cc  OutputFile.cc  OutputFileAscii.cc  OutputFilePlainRoot.cc  OutputFileRoot.cc  Parity.cc  ProjectileDirectionRotator.cc  Reaction.cc  ResponseTable.cc  RotationMatrix.cc  StandardLorentzianModel.cc  StructureDatabase.cc  TabulatedNuclearReaction.cc  (+14 more)
src/scripts/: marley-config.in  setup_marley.C
src/tests/: Histogram.cc  sampling.cc
